@@ -21,6 +21,7 @@ Version 2.7
   - TODO: Set nGap to fraction of second rather than fixed number of frames?
 * VDIF file reading: don't bail if seeking fails, just don't perform file checking
 * startdifx: when run with --wait, skip jobs whose end time has passed
+* startdifx: when run with --wait, count down time to start
 
 Version 2.6
 ~~~~~~~~~~~
